making PyPSA-Xplore compatible with PyPSA-Eur

--- a/params.yaml
+++ b/params.yaml
@@ -1,14 +1,16 @@
 
 ##### Absolute path where PyPSA-X is cloned
-rootpath: 
+rootpath:
 
 
 
 ##### plot network
 bus_sizes: 0.0008
 bus_colors: black
-boundaries_onshore: [-9.93, 4.11, 35.61, 44.18]   ### EU: [-11, 30, 34, 71]
-boundaries_offshore: [-14, 6.35, 35, 47]   ### EU: [-17, 37, 33, 75]
+boundaries_onshore_ES: [-9.93, 4.11, 35.61, 44.18]
+boundaries_offshore_ES: [-14, 6.35, 35, 47]
+boundaries_onshore_EU: [-11, 30, 34, 71]
+boundaries_offshore_EU: [-17, 37, 33, 75]
 
 
 
